Changed way of importing Google Fonts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="http://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap');
+    </style>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
+    <script src="/dist/semantic.min.js"></script>
   </head>
 
   <body>
@@ -72,9 +76,5 @@
       <h2>Any questions?<br>Write to me <br> javistkamartaslysz@gmail.com</h2>
       <p>Designed and developed by Marta Słysz in 2020</p>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
-    <script src="/dist/semantic.min.js"></script>
   </body>
 </html>
