Imported font awesome for displayig icons in nav

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <!-- Bootstrap grid -->
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
+
+    <!-- Semantic UI -->
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+
+    <!-- Font Awesome for displaying icons -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap');
     </style>
+
+    <!-- styles.css stylesheet -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+
+    <!-- Scripts for Semantic UI -->
     <script src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
@@ -25,6 +38,7 @@
         <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="medium icon"></i>medium</a></li>
       </ul>
     </nav>
+
     <header>
       <div class="container">
         <div class="row">
@@ -49,11 +63,10 @@
     </div>
     </header>
 
-
-
     <section>
       <div class="container">
         <div class="row">
+
           <!-- left column -->
           <div class="col-sm">
             <figure>
