--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#contact"><i class="envelope icon"></i>contact</a></li>
-        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="linkedin in icon"></i>linkedin</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i>contact</a></li>
+        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a></li>
         <li></li>
-        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="instagram icon"></i>instagram</a></li>
-        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="medium icon"></i>medium</a></li>
+        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="fab fa-instagram"></i>instagram</a></li>
+        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="fab fa-medium-m"></i>medium</a></li>
       </ul>
     </nav>
 
