Reverting to 3f6330ef4d29cd3a1c1b8ef0665678a24fcc30b1

--- a/index.html
+++ b/index.html
@@ -4,25 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
-    <!-- Bootstrap grid -->
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
-
-    <!-- Semantic UI -->
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-
-    <!-- Font Awesome for displaying icons -->
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-
-    <!-- Google Fonts -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap');
     </style>
-
-    <!-- styles.css stylesheet -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-
-    <!-- Scripts for Semantic UI -->
     <script src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
@@ -31,14 +18,13 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#contact"><i class="fas fa-envelope"></i>contact</a></li>
-        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a></li>
+        <li><a href="#contact"><i class="envelope icon"></i>contact</a></li>
+        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="linkedin in icon"></i>linkedin</a></li>
         <li></li>
-        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="fab fa-instagram"></i>instagram</a></li>
-        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="fab fa-medium-m"></i>medium</a></li>
+        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="instagram icon"></i>instagram</a></li>
+        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="medium icon"></i>medium</a></li>
       </ul>
     </nav>
-
     <header>
       <div class="container">
         <div class="row">
@@ -63,10 +49,11 @@
     </div>
     </header>
 
+
+
     <section>
       <div class="container">
         <div class="row">
-
           <!-- left column -->
           <div class="col-sm">
             <figure>
