deleted icons from nav due to troubles with displaying

--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <!-- Bootstrap grid -->
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+    <!-- Google Fonts -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap');
     </style>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <!-- Fomantic UI scripts -->
     <script src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
     <script src="/dist/semantic.min.js"></script>
+    <!-- My CSS file -->
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
 
   <body>
     <nav>
       <ul>
-        <li><a href="#contact"><i class="envelope icon"></i>contact</a></li>
-        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="linkedin in icon"></i>linkedin</a></li>
+        <li><a href="#contact">contact</a></li>
+        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank">linkedin</a></li>
         <li></li>
-        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="instagram icon"></i>instagram</a></li>
-        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="medium icon"></i>medium</a></li>
+        <li><a href="https://www.instagram.com/javistka/" target="_blank">instagram</a></li>
+        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank">medium</a></li>
       </ul>
     </nav>
     <header>
