Attempt to fix navbar icons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       @import url('https://fonts.googleapis.com/css2?family=Lora&family=Open+Sans&display=swap');
     </style>
     <!-- Fomantic UI scripts -->
-    <script src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
-    <script src="/dist/semantic.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.7/components/icon.min.css">
     <!-- My CSS file -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
@@ -21,11 +22,11 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#contact">contact</a></li>
-        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank">linkedin</a></li>
+        <li><a href="#contact"><i class="envelope icon"></i>contact</a></li>
+        <li><a href="https://www.linkedin.com/in/marta-slysz/" target="_blank"><i class="linkedin in icon"></i>linkedin</a></li>
         <li></li>
-        <li><a href="https://www.instagram.com/javistka/" target="_blank">instagram</a></li>
-        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank">medium</a></li>
+        <li><a href="https://www.instagram.com/javistka/" target="_blank"><i class="instagram icon"></i>instagram</a></li>
+        <li><a href="https://javistkamartaslysz.medium.com/" target="_blank"><i class="medium m icon"></i>medium</a></li>
       </ul>
     </nav>
     <header>
